syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeRequest {
  int32 the_number = 1;
}

message PrimeResponse {
  int32 prime_factor = 1;
}

message NumberRequest {
  int64 number = 1;
}

message NumberResponse {
  double average  = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumber(PrimeRequest) returns (stream PrimeResponse) {};

  rpc ComputeAverage(stream NumberRequest) returns (NumberResponse) {};
}
